# django_ibaktor

./: .gitignore  Procfile  pyproject.toml  render.yaml
app/: db.sqlite3  pyproject.toml
app/config/: settings.py  urls.py
app/hotel/: admin.py  models.py  services.py  urls.py  views.py
app/hotel/migrations/: 0001_initial.py  0002_booking.py
app/hotel/templates/hotel/: availability.html  booking_create.html  booking_success.html
