[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "jonathan001",email = "jonsecu001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (==4.2.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
